--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav.menus {
     padding: 0;
 } */
 .navigation {
-    background-color: #1768ac;
+    background-color: #03256c;
     color: #fff;
     padding: 0 50px;
 }
@@ -276,6 +276,17 @@ button.normal-button:hover {
 .fifth-section form.form-wrapper input[type=button].submit-button:hover {
     background-color: #03256c;
     color: #fff;
+}
+.fifth-section #response-output {
+    padding: 30px 0;
+    font-family: poppins;
+}
+.fifth-section #response-output h3 {
+    color: #03256c;
+    font-weight: bold;
+}
+.fifth-section #response-output p {
+    margin: 0 20px;
 }
 #display-google-map img{
     margin-top: 25px;
